--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Butex | Onepage Responsive HTML Template</title>
+    <title>Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/animate.css' />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -81,7 +81,7 @@
 			</div>
 			<div class="item" style="background-image: url(/images/slider/3.jpg)">
 				<div class="container carousel-caption">							
-					<h2 class="heading animated bounceInDown">We are great disital <span>agency</span><i class="fa fa-chevron-right"></i></h2>
+					<h2 class="heading animated bounceInDown">We are great digital <span>agency</span><i class="fa fa-chevron-right"></i></h2>
 					<p class="slide-info animated bounceInUp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>				
 				</div>
 			</div>
